# rk3066-mkbootimg

./: .gitignore  Android.mk  COPYING  Makefile  Makefile.am  README.md  configure.ac  mkbootimg.c  unpackbootimg.c
src/: unpackbootimg.c
